Fix cursor too high in filter input

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -64,7 +64,7 @@ h2 {
   border-radius: 3px;
   outline: none;
   height: 30px;
-  line-height: 30px;
+  line-height: 15px;
   padding: 0 10px;
   background-color: rgba(240, 240, 240, 1);
   -webkit-font-smoothing: antialiased;
